--- a/admin_page.html
+++ b/admin_page.html
@@ -1,1 +1,29 @@
-<h1 style="font-size: 60px">Admin page</h1>
+<h1 style="font-size: 50px">Admin page</h1>
+
+<style>
+  .button {
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+  }
+
+  .button5 {
+    background-color: white;
+    color: black;
+    border: 2px solid #551555;
+  }
+
+  .button5:hover {
+    background-color: #551555;
+    color: white;
+  }
+</style>
+
+<button class="button button5">Create room/shelfs/storage</button>
+<button class="button button5">Inventory</button>
