New course knapp

--- a/admin_page.html
+++ b/admin_page.html
@@ -27,3 +27,4 @@
 
 <button class="button button5">Create room/shelfs/storage</button>
 <button class="button button5">Inventory</button>
+<button class="button button5">Create new course/group</button>
