--- a/admin_page.html
+++ b/admin_page.html
@@ -25,6 +25,6 @@
   }
 </style>
 
-<button class="button button5">Create room/shelfs/storage</button>
-<button class="button button5">Inventory</button>
-<button class="button button5">Create new course/group</button>
+<a href="create_room.html" class="button button5">Create room/shelfs/storage</button>
+<a href="create_course.html" class="button button5">Create course</button>
+<a href="inventory.html" class="button button5">Inventory</button>
